--- a/templates/article_detail.html
+++ b/templates/article_detail.html
@@ -3,6 +3,11 @@
 {% load humanize %}
 
 {% block content %}
+    <style>
+      .entry-content img{
+        max-width: 100%;
+      }
+    </style>
     <section class="utf_block_wrapper">
       <div class="container">
         <div class="row">
@@ -23,7 +28,7 @@
                   <div class="post-tags">
                     <span>Tags:</span>
                     {% for tag in post.tags.all %}
-                    	<a href="#"># {{ tag }}</a>
+                    	<a href="{% url 'web:article_tag' tag.slug %}"># {{ tag }}</a>
                     {% endfor %}
                   </div>
                 </div>
@@ -41,13 +46,13 @@
 
             <nav class="post-navigation clearfix">
               <div class="post-previous">
-                <a href="#"> <span><i class="fa fa-angle-left"></i>Previous Post</span>
-                  <h3>Zhang social media pop also known when smart innocent...</h3>
+                <a href="{{ prev_post.get_absolute_url }}"> <span><i class="fa fa-angle-left"></i>Previous Post</span>
+                  <h3>{{ prev_post.title }}</h3>
                 </a>
               </div>
               <div class="post-next">
-                <a href="#"> <span>Next Post <i class="fa fa-angle-right"></i></span>
-                  <h3>Zhang social media pop also known when smart innocent...</h3>
+                <a href="{{ next_post.get_absolute_url }}"> <span>Next Post <i class="fa fa-angle-right"></i></span>
+                  <h3>{{ next_post.title }}</h3>
                 </a>
               </div>
             </nav>
@@ -59,90 +64,6 @@
                 <p>Menya Byinshi igihe Nyacyo</p>
               </div>
             </div>
-
-            <div class="related-posts block">
-              <h3 class="utf_block_title"><span>Related Posts</span></h3>
-              <div id="utf_latest_news_slide" class="owl-carousel owl-theme utf_latest_news_slide owl-loaded">
-
-              <div class="owl-stage-outer"><div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s; width: 1201px;"><div class="owl-item active" style="width: 370.039px; margin-right: 30px;"><div class="owl-stage-outer">
-                  <div class="owl-stage" style="transform: translate3d(0px, 0px, 0px); transition: all 0s ease 0s; width: 1067px;">
-                    <div class="owl-item active" style="width: 183.34px; margin-right: 30px;">
-                      <div class="item">
-                        <div class="utf_post_block_style clearfix">
-                          <div class="utf_post_thumb"> <a href="#"><img class="img-fluid" src="images/news/lifestyle/travel5.jpg" alt=""></a> </div>
-                          <a class="utf_post_cat" href="#">Health</a>
-                          <div class="utf_post_content">
-                            <h2 class="utf_post_title title-medium"> <a href="#">Zhang social media pop also
-                                innocent...</a> </h2>
-                            <div class="utf_post_meta"> <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25
-                                Jan, 2020</span> </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="owl-item active" style="width: 183.34px; margin-right: 30px;">
-                      <div class="item">
-                        <div class="utf_post_block_style clearfix">
-                          <div class="utf_post_thumb"> <a href="#"><img class="img-fluid" src="images/news/lifestyle/health5.jpg" alt=""></a> </div>
-                          <a class="utf_post_cat" href="#">Health</a>
-                          <div class="utf_post_content">
-                            <h2 class="utf_post_title title-medium"> <a href="#">Zhang social media pop also
-                                innocent...</a> </h2>
-                            <div class="utf_post_meta"> <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25
-                                Jan, 2020</span> </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="owl-item active" style="width: 183.34px; margin-right: 30px;">
-                      <div class="item">
-                        <div class="utf_post_block_style clearfix">
-                          <div class="utf_post_thumb"> <a href="#"><img class="img-fluid" src="images/news/lifestyle/travel3.jpg" alt=""></a> </div>
-                          <a class="utf_post_cat" href="#">Travel</a>
-                          <div class="utf_post_content">
-                            <h2 class="utf_post_title title-medium"> <a href="#">Zhang social media pop also
-                                innocent...</a> </h2>
-                            <div class="utf_post_meta"> <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25
-                                Jan, 2020</span> </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="owl-item active" style="width: 183.34px; margin-right: 30px;">
-                      <div class="item">
-                        <div class="utf_post_block_style clearfix">
-                          <div class="utf_post_thumb"> <a href="#"><img class="img-fluid" src="images/news/lifestyle/travel4.jpg" alt=""></a> </div>
-                          <a class="utf_post_cat" href="#">Travel</a>
-                          <div class="utf_post_content">
-                            <h2 class="utf_post_title title-medium"> <a href="#">Zhang social media pop also
-                                innocent...</a> </h2>
-                            <div class="utf_post_meta"> <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25
-                                Jan, 2020</span> </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="owl-item" style="width: 183.34px; margin-right: 30px;">
-                      <div class="item">
-                        <div class="utf_post_block_style clearfix">
-                          <div class="utf_post_thumb"> <a href="#"><img class="img-fluid" src="images/news/lifestyle/travel5.jpg" alt=""></a> </div>
-                          <a class="utf_post_cat" href="#">Health</a>
-                          <div class="utf_post_content">
-                            <h2 class="utf_post_title title-medium"> <a href="#">Zhang social media pop also
-                                innocent...</a> </h2>
-                            <div class="utf_post_meta"> <span class="utf_post_date"><i class="fa fa-clock-o"></i> 25
-                                Jan, 2020</span> </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
-                </div></div><div class="owl-item" style="width: 370.039px; margin-right: 30px;"><div class="owl-nav">
-                  <div class="owl-prev disabled"><i class="fa fa-angle-left"></i></div>
-                  <div class="owl-next"><i class="fa fa-angle-right"></i></div>
-                </div></div><div class="owl-item" style="width: 370.039px; margin-right: 30px;"><div class="owl-dots disabled"></div></div></div></div><div class="owl-nav"><div class="owl-prev disabled"><i class="fa fa-angle-left"></i></div><div class="owl-next"><i class="fa fa-angle-right"></i></div></div><div class="owl-dots disabled"></div></div>
-            </div>
-
             <!-- Post comment start -->
             <div id="comments" class="comments-area block">
               <h3 class="utf_block_title"><span>{{ post.comments.count }} Comments</span></h3>
@@ -202,7 +123,7 @@
           <div class="col-lg-4 col-md-12">
             <div class="sidebar utf_sidebar_right">
               <div class="widget">
-                <h3 class="utf_block_title"><span>Follow Us</span></h3>
+                <h3 class="utf_block_title"><span>Dukurikire</span></h3>
                 <ul class="social-icon">
                   <li><a href="#" target="_blank"><i class="fa fa-rss"></i></a></li>
                   <li><a href="#" target="_blank"><i class="fa fa-facebook"></i></a></li>
@@ -214,13 +135,13 @@
               </div>
 
               <div class="widget color-default">
-                <h3 class="utf_block_title"><span>Popular News</span></h3>
+                <h3 class="utf_block_title"><span>Amakuru Akunzwe</span></h3>
                 <div class="utf_list_post_block">
                   <ul class="utf_list_post">
                     {% for post in popular_news %}
                       <li class="clearfix">
                         <div class="utf_post_block_style post-float clearfix">
-                          <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid" src="{{ post.thumbnail.url }}" alt="{{ post.title }}"> </a> <a class="utf_post_cat" href="#">{{ post.post_category }}</a> </div>
+                          <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid" src="{{ post.thumbnail.url }}" alt="{{ post.title }}"> </a></div>
                           <div class="utf_post_content">
                             <h2 class="utf_post_title title-small"> <a href="{{ post.get_absolute_url }}">{{ post.title|title }}</a> </h2>
                             <div class="utf_post_meta"> <span class="utf_post_author"><i class="fa fa-user"></i> <a href="#">{{ post.author.username|title }}</a></span> <span class="utf_post_date"><i class="fa fa-eye"></i>
@@ -235,7 +156,7 @@
 
               <div class="widget text-center"> <img class="banner img-fluid" src="images/banner-ads/ad-sidebar.png" alt=""> </div>
               <div class="widget widget-tags">
-                <h3 class="utf_block_title"><span>Popular Tags</span></h3>
+                <h3 class="utf_block_title"><span>Ibyakunzwe</span></h3>
                 <ul class="unstyled clearfix">
                   <li><a href="#">Business</a></li>
                   <li><a href="#">Corporate</a></li>
@@ -252,20 +173,21 @@
               </div>
 
               <div class="widget m-bottom-0">
-                <h3 class="utf_block_title"><span>Newsletter</span></h3>
+                <h3 class="utf_block_title"><span>Dukurikire kuri Email</span></h3>
                 <div class="utf_newsletter_block">
                   <div class="utf_newsletter_introtext">
-                    <h4>Subscribe Newsletter!</h4>
-                    <p>Lorem ipsum dolor sit consectetur adipiscing elit Maecenas in pulvinar neque Nulla finibus
-                      lobortis pulvinar.</p>
+                      <h4>Injizamo Email Yawe</h4>
+                      <p>Horana amakuru mashya yacu winjiza email yawe hano</p>
                   </div>
                   <div class="utf_newsletter_form">
-                    <form action="#" method="post">
-                      <div class="form-group">
-                        <input type="email" name="email" id="utf_newsletter_form-email" class="form-control form-control-lg" placeholder="E-Mail Address" autocomplete="off">
-                        <button class="btn btn-primary">Subscribe</button>
-                      </div>
-                    </form>
+                      <form action="#" method="post">
+                          <div class="form-group">
+                              <input type="email" name="email" id="utf_newsletter_form-email"
+                                  class="form-control form-control-lg" placeholder="E-Mail Address"
+                                  autocomplete="off">
+                              <button class="btn btn-primary">Injira</button>
+                          </div>
+                      </form>
                   </div>
                 </div>
               </div>
