--- a/templates/inc/header.html
+++ b/templates/inc/header.html
@@ -68,7 +68,7 @@
                 </nav>
                 <div class="utf_nav_search"> <span id="search"><i class="fa fa-search"></i></span> </div>
                 <div class="utf_search_block" style="display: none;">
-                    <input type="text" class="form-control" placeholder="Enter your keywords...">
+                    <input type="text" class="form-control" placeholder="Shakishikiriza aha...">
                     <span class="utf_search_close">×</span>
                 </div>
             </div>
