--- a/templates/layout.html
+++ b/templates/layout.html
@@ -31,6 +31,8 @@
         {% block content %}
       
         {% endblock content %}
+
+        {% include "inc/footer.html" %}
     
         <!-- Javascript Files -->
         <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
