--- a/templates/index.html
+++ b/templates/index.html
@@ -21,7 +21,7 @@
                                 <span class="utf_post_author"><i class="fa fa-user"></i> <a
                                         href="#">{{ post.author.username|title }}</a></span>
                                 <span class="utf_post_date"><i
-                                        class="fa fa-clock-o"></i>{{ post.post.publish|naturalday }}</span>
+                                        class="fa fa-clock-o"></i>{{ post.publish|naturalday }}</span>
                             </div>
                         </div>
                     </div>
