--- a/templates/index.html
+++ b/templates/index.html
@@ -230,7 +230,7 @@
                                     <div class="utf_post_block_style clearfix">
                                         <div class="utf_post_thumb"> <a href="#"> <img class="img-fluid"
                                                     src="{{ post.thumbnail.url }}" alt=""> </a> </div>
-                                        <a class="utf_post_cat" href="#">Lifestyle</a>
+                                        <a class="utf_post_cat" href="#">{{ post.category.name }}</a>
                                         <div class="utf_post_content">
                                             <h2 class="utf_post_title"> <a href="{{ post.get_absolute_url }}">{{ post.title }}</a> </h2>
                                             <div class="utf_post_meta"> <span class="utf_post_author"><i
